--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,9 +23,9 @@
     ],
     "rules": {
         "consistent-return": 2,
-        "indent"           : [1, 4],
+        "indent"           : 0,
         "no-else-return"   : 1,
-        "semi"             : [1, "always"],
+        "semi"             : 0,
         "space-unary-ops"  : 2
     }
 }
